@@ -9,6 +9,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TestHttpServer2", "TestHttp
 EndProject
 Project("{9344BDBB-3E7F-41FC-A0DD-8665D75EE146}") = "debian", "debian\debian.mdproj", "{C0B10149-38C8-437F-847E-E42E80A44248}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TestHttpClient", "TestHttpClient\TestHttpClient.csproj", "{14EACB29-CE64-4944-90E6-302D97338F25}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Default|Any CPU = Default|Any CPU
@@ -16,6 +18,12 @@ Global
 		Release|Any CPU = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{14EACB29-CE64-4944-90E6-302D97338F25}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{14EACB29-CE64-4944-90E6-302D97338F25}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{14EACB29-CE64-4944-90E6-302D97338F25}.Default|Any CPU.ActiveCfg = Debug|Any CPU
+		{14EACB29-CE64-4944-90E6-302D97338F25}.Default|Any CPU.Build.0 = Debug|Any CPU
+		{14EACB29-CE64-4944-90E6-302D97338F25}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{14EACB29-CE64-4944-90E6-302D97338F25}.Release|Any CPU.Build.0 = Release|Any CPU
 		{54B8C20B-011C-4FF7-8009-1A428FDF05DA}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{54B8C20B-011C-4FF7-8009-1A428FDF05DA}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{54B8C20B-011C-4FF7-8009-1A428FDF05DA}.Default|Any CPU.ActiveCfg = Debug|x86
